# gatix

./: CMakeLists.txt  README.md
grub/: grub.cfg
iso/boot/grub/: grub.cfg
kernel/: CMakeLists.txt  link.ld
kernel/cpu/: gdt.c  idt.c  irq.c  isr.asm  isr.c  pit.c
kernel/drivers/: keyboard.c  serial.c  vga.c
kernel/include/cpu/: gdt.h  idt.h  irq.h  isr.h  pit.h
kernel/include/drivers/: keyboard.h  serial.h  vga.h
kernel/include/std/: logging.h  system.h  utils.h
kernel/init/: main.asm  main.c
kernel/std/: logging.c  system.c  utils.c  vsprintf.c
modules/: CMakeLists.txt
modules/cafe_babe/: CMakeLists.txt  cafe_babe.asm
scripts/: build.sh  debug.sh  run.sh
src/: CMakeLists.txt  link.ld
src/arch/i386/: link.ld
src/arch/i386/desc/: gdt.asm  idt.asm
src/arch/i386/int/: irq.asm  isr.asm
src/arch/i386/load/: loader.asm
src/arch/i386/loader/: loader.asm
src/arch/i386/tables/: gdt.asm  idt.asm  irq.asm  isr.asm
src/impl/: io.c  link.ld  memory.c
src/impl/desc/: gdt.c  idt.asm  idt.c
src/impl/init/: boot.asm  main.c
src/impl/input/: keyboard.c
src/impl/int/: irq.c  isr.asm  isr.c
src/impl/load/: loader.asm
src/impl/mm/: heap.c  pmm.c  vmm.c
src/impl/monitor/: monitor.c
src/impl/output/: monitor.c
src/impl/pit/: pit.c
src/impl/std/: elf.c  io.c  memory.c  panic.c
src/impl/sys/: pit.c
src/impl/tables/: gdt.c  idt.c  irq.c  isr.c
src/include/: io.h  memory.h  multiboot.h  types.h
src/include/arch/: arch.h  gdt.h  idt.h  irq.h  isr.h  pit.h
src/include/desc/: gdt.h  idt.h
src/include/init/: multiboot.h
src/include/int/: irq.h  isr.h
src/include/io/: keyboard.h  serial.h  vga.h
src/include/load/: multiboot.h
src/include/mm/: heap.h  kmalloc.h  pmm.h  vmm.h
src/include/monitor/: monitor.h
src/include/output/: monitor.h
src/include/pit/: pit.h
src/include/std/: elf.h  io.h  logging.h  memory.h  panic.h  stdarg.h  string.h  types.h  utils.h  vsprintf.h
src/include/sys/: pit.h
src/include/tables/: gdt.h  idt.h  irq.h  isr.h
src/kernel/: link.ld
src/kernel/arch/: arch.c  gdt.asm  gdt.c  idt.asm  idt.c  irq.asm  irq.c  isr.c  pit.c
src/kernel/arch/x86/: gdt.asm  irq.asm  isr.asm
src/kernel/drivers/: keyboard.c  serial.c  vga.c
src/kernel/init/: bootstrap.asm  loader.asm  main.c
src/kernel/io/: keyboard.c  monitor.c  serial.c  vga.c
src/kernel/mm/: heap.c  kmalloc.c  pmm.c
src/kernel/std/: logging.c  panic.c  string.c  utils.c  vsprintf.c
tests/: CMakeLists.txt  runner.c
tests/impl/init/: main.c
tests/include/: minunit.h
